# institutional-repository-prototype

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
apps/cms/: apps.py  context_processors.py  models.py  wagtail_hooks.py
apps/cms/migrations/: 0001_initial.py  0002_contentpage_and_announcement_upgrade.py  0003_contentindexpage.py
apps/collections_app/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/collections_app/migrations/: 0001_initial.py  0002_initial.py  0003_collection_social_features.py
apps/core/: admin.py  admin_mixins.py  dashboard.py  health.py  views.py
apps/ingestion/: apps.py  services.py
apps/publications/: admin.py  apps.py  forms.py  models.py  previews.py  urls.py  views.py  widgets.py
apps/publications/migrations/: 0001_initial.py  0002_initial.py  0003_publicationchunk.py  0004_publication_extraction_fields.py  0005_publication_vector_index_state.py  0006_publicationchunk_context_fields.py  0007_publication_derived_characteristics.py  0008_publication_workflow_fields.py  0009_publication_user_engagement.py  0010_publication_preview_fields.py
apps/search/: admin.py  benchmarking.py  forms.py  models.py  recommendations.py  services.py  urls.py  views.py
apps/ui/: admin.py  apps.py  context_processors.py  middleware.py  models.py  registry.py  services.py  urls.py  views.py
apps/users/: adapters.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/vector_store/: apps.py  exceptions.py  services.py
benchmarks/: search_benchmark.sample.json
config/: urls.py
config/settings/: base.py  production.py
docker/: entrypoint.sh  gunicorn.conf.py
docker/nginx/: default.conf  nginx.conf
docs/: architecture.md  cms-guide.md  content-editor-guide.md  deployment-production.md  development-workflows.md  search-and-indexing.md  ui-extension-guide.md  wagtail_admin_fix_notes.txt  wagtail_bootstrap_guide.md
sql/: mock_seed_repository_data.postgresql.sql
static/css/ui/: cms.css  (+1 more)
templates/: base.html
templates/admin/: index.html  statistics_dashboard.html
(+56 files in other folders)
