[project]
name = "institutional-repository-prototype"
version = "0.1.0"
description = "Prototype of an institutional repository with semantic search, based on the dissertation architecture."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "Django>=5.2,<5.3",
  "wagtail>=7.0,<7.1",
  "psycopg[binary]>=3.2,<3.3",
  "Pillow>=11.0,<12.0",
  "pypdf>=5.0,<6.0",
  "python-docx>=1.1,<2.0",
  "pymilvus[model]>=2.6,<2.7",
  "transformers>=4.48,<5.0",
  "huggingface_hub>=0.32,<1.0",
  "hf_xet>=1.1,<2.0",
  "FlagEmbedding>=1.3,<2.0",
  "scipy>=1.14,<2.0",
  "whitenoise>=6.9,<7.0",
  "torch>=2.11,<2.12",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-django>=4.11,<5.0",
  "ruff>=0.11,<0.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
